--- a/style.css
+++ b/style.css
@@ -1,16 +1,18 @@
 body{
     font-family: 'Poppins', sans-serif;
-    background-color: orangered;
+    margin: 0;
+    
 }
 
 h1{
     font-size: 50px;
 }
 .name-color{
-    color: orange;
+    color: skyblue;
 }
 .h3-color{
-    color: hotpink;
+    color: white;
+    font-size: 20px;
 }
 .half-width{
     width: 40%;
@@ -20,4 +22,19 @@ h1{
 }
 .half-width img{
     width: 100%;
+}
+.top-banner{
+    background-image: url(images/imga.jpeg);
+    background-repeat: no-repeat;
+}
+section{
+    height: 700px;
+}
+.link-button{
+    text-decoration: none;
+    background-image: linear-gradient(45deg,red, tomato);
+    padding: 10px 25px;
+    border-radius: 10px;
+    color: white;
+    font-weight: 700px;
 }
